force-app/main/default/objects/Settlement_Line_Field_Mapping__mdt/Settlement_Line_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Information to map a Custom Object tot a Settlement Line Object.</description>
    <label>Settlement Line Field Mapping</label>
    <pluralLabel>Settlement Line Field Mappings</pluralLabel>
</CustomObject>