force-app/main/default/objects/Settlement_Line_Field_Mapping__mdt/fields/Settlement_Line_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Line_Field_API_Name__c</fullName>
    <label>Settlement Line Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>