force-app/main/default/objects/Settlement_Line_Field_Mapping__mdt/fields/Settlement_Object__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Object__c</fullName>
    <inlineHelpText>The Settlement Object this field is a part of.</inlineHelpText>
    <label>Settlement Object</label>
    <referenceTo>Settlement_Object__mdt</referenceTo>
    <relationshipLabel>Settlement Line Field Mappings</relationshipLabel>
    <relationshipName>Settlement_Line_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>