force-app/main/default/objects/Settlement_Line_Field_Mapping__mdt/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <inlineHelpText>The Field API Name of the Source sObject</inlineHelpText>
    <label>Source Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>