force-app/main/default/objects/Settlement_Line_Field_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Settlement_Object__c</columns>
    <columns>Source_Field_API_Name__c</columns>
    <columns>Settlement_Line_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>